# rak-zephyr-app

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/adc/: CMakeLists.txt  README.rst  prj.conf
app/ai/neuton/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
app/ai/neuton/boards/: rak4631.overlay
app/ai/neuton/model_data/: RAK1904_FLAT_1min.csv  RAK1904_FRONTEDGE_1min.csv  RAK1904_OTHER_1min.csv  RAK1904_TOPEDGE_1min.csv  RAK1904_data.csv
app/ai/neuton/neuton-ai/neuton/include/neuton/: neuton.h  neuton_types.h  neuton_version.h
app/ai/neuton/neuton-ai/neuton_generated/: README.md  neuton_user_config.h  neuton_user_data_prep_config.h  neuton_user_data_prep_meta.inc  neuton_user_model.inc  neuton_user_model_config.h  neuton_user_types.h
app/ai/neuton/src/: main.c
app/blinky/: README.rst  prj.conf
app/dfu/: CMakeLists.txt  README.rst  mcuboot.md  overlay_ble.conf  overlay_mcuboot.conf  prj.conf  sysbuild.conf
app/hello_world/: README.rst  sample.yaml
app/lora/lora_test/: CMakeLists.txt  README.rst  overlay_sleep_rak11720.conf  overlay_sleep_rak3172.conf  sample.yaml
app/lora/lora_test/boards/: rak11720.conf  rak11720.overlay  rak4631.overlay
app/lora/lora_test/src/: main.c  rak_ble_peripheral.c  rak_ble_peripheral.h
app/lora/lorawan_otaa/: CMakeLists.txt  README.rst  overlay_sleep_rak11720.conf  overlay_sleep_rak4631.conf  sample.yaml
app/lora/lorawan_otaa/boards/: rak11160.conf  rak11720.overlay  rak3112_procpu.overlay
app/lora/lorawan_otaa/src/: main.c  rak_adc.c  rak_ble_peripheral.c  rak_lorawan.c  rak_lp_console.c  rak_lp_console.h
app/lora/lorawan_otaa/sysbuild/mcuboot/: prj.conf
key/: rak_key_ecdsa-p256.c  rak_key_ecdsa-p256.pem
modules/: CMakeLists.txt  Kconfig
scripts/: west-commands.yml
zephyr/: patches.yml
(+210 files in other folders)
